# gpui

./: .gitignore  Cargo.toml  ERROR.md  README.md
.cargo/: config.toml
src/: audio_view.rs  bitmap_utils.rs  chart_view.rs  doc_view.rs  latex_view.rs  main.rs  pdf_view.rs  remote.rs  three_d_view.rs  video_view.rs
src/components/: audio.rs  charts.rs  documents.rs  homepage.rs  latex.rs  mod.rs  pdf.rs  three_d.rs  video.rs
